# qt-instrument-cluster

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cluster  cluster_qmltyperegistrations.cpp  cmake_install.cmake
cluster_autogen/: moc_predefs.h  mocs_compilation.cpp
cluster_autogen/EWIEGA46WW/: moc_OBD2_PID_STATE.cpp  moc_OBD2_PID_STATE.cpp.d  moc_OBD2_PID_STATE.cpp.json  moc_ResourceManager.cpp  moc_ResourceManager.cpp.d  moc_ResourceManager.cpp.json  moc_Vehicle.cpp  moc_Vehicle.cpp.d  moc_Vehicle.cpp.json
cluster_autogen/UVLADIE3JM/: moc_OBD2_PID_STATE.cpp  moc_OBD2_PID_STATE.cpp.d  moc_ResourceManager.cpp  moc_ResourceManager.cpp.d  moc_Vehicle.cpp  moc_Vehicle.cpp.d
cmake_build/: CMakeCache.txt  Makefile  cmake_install.cmake
meta_types/: cluster_json_file_list.txt  cluster_json_file_list.txt.timestamp  qt6cluster_metatypes.json.gen
qmltypes/: cluster_foreign_types.txt
resource_manager/qml/: Middle.qml  main.qml
resource_manager/qml/Components/: Gauge.qml  Stat.qml  StatProgressBar.qml
resources/qml/: BottomBar.qml  MainView.qml
resources/qml/Components/: Rotator.qml  WidgetLoader.qml
src/: OBD2_PID_STATE.cpp  OBD2_PID_STATE.h  ResourceManager.cpp  ResourceManager.h  Vehicle.cpp  Vehicle.h  main.cpp
